helm/manifests/customer-bff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-bff-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-bff
  template:
    metadata:
      labels:
        app: customer-bff
    spec:
      serviceAccountName: hacmieu-sa
      containers:
        - name: customer-bff
          image: caophi562005/vshop-customer-bff:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3100
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
