helm/manifests/customer-bff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-bff
spec:
  type: ClusterIP
  selector:
    app: customer-bff
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
